[package]
name = "pdf2epub"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
clap = { version = "4.5.30", features = ["derive"] }
anyhow = "1.0.98"
image = "0.25.6"
pdfium-render = { version = "0.8.32", default-features = true, features = ["pdfium_latest", "image"] }
ocrs = "0.10.3"
rten = "0.18.0"
rten-imageproc = "0.18.0"
rten-tensor = "0.18.0"
indicatif = "0.17.11"
