[package]
name = "pdf2epub"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
clap = { version = "4.5.30", features = ["derive"] }
anyhow = "1.0.98"
image = "0.25.6"
pdfium-render = { version = "0.8.32", default-features = true, features = ["pdfium_latest", "image"] }
indicatif = "0.17.11"
leptess = "0.14.0"
epub-builder = "0.8.0"
html-escape = "0.2.13"
